# moe_chess_expert

./: README.md  pyproject.toml  requirements.txt
configs/: train_chess_expert_test.yaml
data/: chess_dummy.jsonl  chess_sample.pgn  chess_stockfish.jsonl
data_prep/chess/: build_stockfish_dataset.py
docs/: llm_chess_moe_status.md
src/: evaluation.py  train_chess_expert.py
src/approaches/: registry.py
src/approaches/chess_expert/: ReadMe.md  __init__.py  adapter.py  config.py  layer.py  model.py  stockfish.py
src/approaches/moelpr/: ReadMe.md  adapter.py  config.py  layer.py  model.py
src/core/: generic_adapter.py  logger.py  wrappers.py
